// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mixin Functions alignItems Function snapshot test should match 1`] = `
Array [
  "
  align-items: ",
  "center",
  ";
  -ms-flex-align: ",
  "center",
  ";
  -ms-align-items: ",
  "center",
  ";
  -moz-align-items: ",
  "center",
  ";
  -webkit-align-items: ",
  "center",
  ";
",
]
`

exports[`mixin Functions appearance Function snapshot test should match 1`] = `
Array [
  "
  appearance: ",
  "none",
  ";
  -ms-appearance: ",
  "none",
  ";
  -moz-appearance: ",
  "none",
  ";
  -webkit-appearance: ",
  "none",
  ";
",
]
`

exports[`mixin Functions flexDirection Function snapshot test should match 1`] = `
Array [
  "
  flex-direction: ",
  "row",
  ";
  -ms-flex-direction: ",
  "row",
  ";
  -moz-flex-direction: ",
  "row",
  ";
  -webkit-flex-direction: ",
  "row",
  ";
",
]
`

exports[`mixin Functions flexWrap Function snapshot test should match 1`] = `
Array [
  "
  flex-wrap: ",
  "wrap",
  ";
  -ms-flex-wrap: ",
  "wrap",
  ";
  -moz-flex-wrap: ",
  "wrap",
  ";
  -webkit-flex-wrap: ",
  "wrap",
  ";
",
]
`

exports[`mixin Functions flexbox Function snapshot test should match 1`] = `
Array [
  "
  display: flex;
  display: -moz-box;
  display: -webkit-box;
  display: -ms-flexbox;
  display: -webkit-flex;
",
]
`

exports[`mixin Functions justifyContent Function snapshot test should match 1`] = `
Array [
  "
  -ms-flex-pack: ",
  "center",
  ";
  justify-content: ",
  "center",
  ";
  -ms-justify-content: ",
  "center",
  ";
  -moz-justify-content: ",
  "center",
  ";
  -webkit-justify-content: ",
  "center",
  ";
",
]
`

exports[`mixin Functions respondTo Function snapshot test should match 1`] = `
Array [
  "
    @media (max-width: ",
  "1023",
  "px) {
      ",
  "background-color: red",
  ";
    }
  ",
]
`

exports[`mixin Functions respondTo Function snapshot test should match 2`] = `
Array [
  "
    @media (max-width: ",
  "1919",
  "px) {
      ",
  "background-color: red",
  ";
    }
  ",
]
`

exports[`mixin Functions respondTo Function snapshot test should match 3`] = `
Array [
  "
    @media (max-width: ",
  "1367",
  "px) {
      ",
  "background-color: red",
  ";
    }
  ",
]
`

exports[`mixin Functions respondTo Function snapshot test should match 4`] = `
Array [
  "
    @media (max-width: ",
  "750",
  "px) {
      ",
  "background-color: red",
  ";
    }
  ",
]
`

exports[`mixin Functions transform Function snapshot test should match 1`] = `
Array [
  "
  transform: ",
  "translate(0, 100%)",
  ";
  -o-transform: ",
  "translate(0, 100%)",
  ";
  -ms-transform: ",
  "translate(0, 100%)",
  ";
  -moz-transform: ",
  "translate(0, 100%)",
  ";
  -webkit-transform: ",
  "translate(0, 100%)",
  ";
",
]
`

exports[`mixin Functions transition Function snapshot test should match 1`] = `
Array [
  "
  transition: ",
  "all 500ms linear",
  ";
  -o-transition: ",
  "all 500ms linear",
  ";
  -ms-transition: ",
  "all 500ms linear",
  ";
  -moz-transition: ",
  "all 500ms linear",
  ";
  -webkit-transition: ",
  "all 500ms linear",
  ";
",
]
`
